# ros-robot-inference

./: README.md
robot_inference/: CMakeLists.txt  package.xml
robot_inference/launch/: robot_inference.launch
robot_inference/msg/: Observation.msg  Result.msg
robot_inference/sample/: test.txt
robot_inference/scripts/: inference.py  robot_inference_client.py  robot_inference_server.py
robot_inference/src/: robot_inference_client.cpp
robot_inference/srv/: Inference.srv
