<?xml version="1.0"?>
<package>
  <name>robot_inference</name>
  <version>0.1.0</version>
  <description>The robot_inference package</description>

  <maintainer email="anchen1011@gmail.com">a.chen</maintainer>


  <license>MIT</license>


  <url type="website">http://github.com/andchen1011/robot-inference-ros</url> 


  <author email="anchen1011@gmail.com">A. Chen</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
